refactor: 9) No Getters/Setters/Properties