@@ -8,7 +8,8 @@ public class ExpenseReportFixer {
 	}
 
 	public ExpenseMultiplication findThreeMultiplied(ExpenseReport report) {
-		int _2018 = Integer.parseInt(report.getExpenses().get(0).getExpense());
+		ExpenseTriple triple = report.find3ExpensesSumming2020();
+		int _2018 = Integer.parseInt(triple.getFirst().getExpense());
 		return new ExpenseMultiplication(_2018);
 	}
 }
